FIX : z-index

--- a/src/components/directMessage/directMessage.scss
+++ b/src/components/directMessage/directMessage.scss
@@ -22,7 +22,7 @@ ul li {
 }
 
 .DM {
-  z-index: 10;
+  z-index: 1;
 	position: absolute;
 	width: 360px;
 	height: fit-content;
